VaultProperties